# SingleViewReconstruction

./: .gitignore  LICENSE  README.md  download_models.py  environment.yml  run_on_example_scenes_from_scenenet.py
BlenderProc/: README.md  config.yaml  convert_hdf5_to_sdf_format.py  generate_color_and_normal_imgs.py  scenenet_config.yaml
CompressionAutoEncoder/: README.md  config.json  decode.py  encode.py  generate_encoded_outputs.py  train.py
CompressionAutoEncoder/src/: autoencoder.py  configreader.py  dataset.py
LossCalculatorTSDF/: Array3D.cc  Array3D.h  CMakeLists.txt  Hdf5ReaderAndWriter.h  Image.h  README.md  generate_loss_values.py  main.cpp
LossCalculatorTSDF/util/: StopWatch.h
SDFGen/: CMakeLists.txt  README.md  generate_tsdf_volumes.py  main.cpp
SDFGen/container/: Array3D.h  Array3D_i.h  Octree.cpp  Octree.h  Space.cpp  Space.h
SDFGen/geom/: BoundingBox.cpp  BoundingBox.h  Line.cc  Line.h  Plane.cc  Plane.h  Polygon.cpp  Polygon.h  PolygonCubeIntersection.cpp  PolygonCubeIntersection.h
SDFGen/geom/math/: AvgNumber.h  MinMaxValue.h  Point.h  Point_i.h  Transform.h  Transform_i.h
SDFGen/test/: PolygonTest.cc  PolygonTest.h
SDFGen/util/: Hdf5Writer.h  StopWatch.cc  Utility.h
SUNCG/: README.md  generate_house_objs_and_cameras.py
SingleViewReconstruction/: README.md  generate_tf_records.py  predict_datapoint.py  settings_file.yml  train.py
SingleViewReconstruction/scripts/: calcMetrics.py
SingleViewReconstruction/src/: DataSetLoader.py  LossManager.py  SettingsReader.py  TreeModel.py
SingleViewReconstruction/src/utils/: __init__.py  averagenumber.py  averagestopwatch.py  estimatedtimer.py  stopwatch.py  stopwatchcontext.py  timedprinter.py  timeframe.py
TSDFRenderer/: README.md  visualize_tsdf.py
TSDFRenderer/engine/: FragmentShader.glsl  RenderObject.py  VertexShader.glsl  WindowManager.py  __init__.py  common.py
TSDFRenderer/engine/math_gl/: __init__.py  mat4.py  vec3.py  vec4.py
UNetNormalGen/: README.md  generate_predicted_normals.py  train.py
UNetNormalGen/data/: generate_tfrecords.py
UNetNormalGen/settings/: settings_file.yml
UNetNormalGen/source/: data_loader.py  loss_manager.py  model.py  settings_reader.py
